fix horizontal scroll

--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@
     scroll-behavior: smooth;
 }
 
-html {
+html, body {
     overflow-x: hidden;
 }
 
